--- a/src/main/resources/templates/gestion_compras.html
+++ b/src/main/resources/templates/gestion_compras.html
@@ -11,11 +11,10 @@
         <aside class="sidebar">
             <h2>Administrador</h2>
             <ul>
-                <li><a href="gestion_ventas.html">Gestión de Ventas</a></li>
-                <li><a href="gestion_compras.html">Gestión de Compras</a></li>
-                <li><a href="gestion_almacen.html">Gestión de Almacén</a></li>
-                <li><a href="gestion_reclamos.html">Gestión de Reclamos</a></li>
-                <li><a href="admin.html">Volver al Panel</a></li>
+                <li><a th:href="@{/ventas}">Gestión de Ventas</a></li>
+                <li><a th:href="@{/compras}">Gestión de Compras</a></li>
+                <li><a th:href="@{/almacen}">Gestión de Almacén</a></li>
+                <li><a th:href="@{/reclamos}">Gestión de Reclamos</a></li>
             </ul>
         </aside>
         <main class="content">
@@ -25,9 +24,9 @@
             <section>
                 <h2>Administrar Compras</h2>
                 <p>Administra las compras de proveedores.</p>
-                <button>Agregar Compra</button>
-                <button>Ver Pedidos</button>
-                <button th:href="@{/inventario}">Registrar proveedor</button>
+                <a th:href="@{/compras/registrarCompra}">Registrar Compra</a>
+                <a th:href="@{/compras/listarCompras}">Listar Compras</a>
+                <a th:href="@{/compras/proveedor}">Listar proveedores</a>
             </section>
         </main>
     </div>
