--- a/src/main/resources/templates/gestion_reclamos.html
+++ b/src/main/resources/templates/gestion_reclamos.html
@@ -11,11 +11,10 @@
         <aside class="sidebar">
             <h2>Administrador</h2>
             <ul>
-                <li><a href="gestion_ventas.html">Gestión de Ventas</a></li>
-                <li><a href="gestion_compras.html">Gestión de Compras</a></li>
-                <li><a href="gestion_almacen.html">Gestión de Almacén</a></li>
-                <li><a href="gestion_reclamos.html">Gestión de Reclamos</a></li>
-                <li><a href="admin.html">Volver al Panel</a></li>
+                <li><a th:href="@{/ventas}">Gestión de Ventas</a></li>
+                <li><a th:href="@{/compras}">Gestión de Compras</a></li>
+                <li><a th:href="@{/almacen}">Gestión de Almacén</a></li>
+                <li><a th:href="@{/reclamos}">Gestión de Reclamos</a></li>
             </ul>
         </aside>
         <main class="content">
@@ -25,8 +24,8 @@
             <section>
                 <h2>Administrar Reclamos</h2>
                 <p>Gestione los reclamos y devoluciones.</p>
-                <button>Ver Reclamos</button>
-                <button>Registrar Reclamo</button>
+                <a th:href="@{/reclamos/listarReclamos}">Ver Reclamos</a>
+                <a th:href="@{/reclamos/registrarReclamo}">Registrar Reclamo</a>
             </section>
         </main>
     </div>
